--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "concstats"]
+	path = concstats
+	url = https://github.com/schneiderpy/concstats
+	shallow = true
+	registered = true
